# .Enron

./: .gitignore  INTRADAY_RMSE_SPEC.txt  README.md  all_run_submissions_plot.ipynb  average_submissions.py  blend_latest_transformed_with_best_peaks.py  compare_run_submissions.py  compare_submissions_per_market_20-151106_vs_20-202340.ipynb  eda_analysis.ipynb  experiments.csv  intraday_full_fallback_spike.py  main.py  main_per_market.py  make_submission_missing_plus2std.py  market_correlation_deep_dive.ipynb  market_model_diagnostics.ipynb  missingness_cheat_probe.py  pyproject.toml  reproduce_final_submission.py  run_train_per_market_interactions_2c02eb6_cv_v1.sh  shap_from_saved_models.py  shap_latest_run.py  submission.csv  submission_avg_20-151106_20-202340_21-101658.csv  submission_blend_per_market_20-151106_20-202340.csv  submission_intraday_pipeline.csv  submission_per_market.csv  submission_per_market_interactions.csv  submission_per_market_interactions_plus_top5x2_from_151106.csv  submission_per_market_interactions_side_size.csv  submission_submissio_plus2std_missing.csv  tag_run.py  train.py  train_orthogonal_spike_fallback_plus.py  train_per_market_interactions.py  train_per_market_interactions_2c02eb6.py  train_per_market_interactions_commit_baseline.py  train_per_market_interactions_commit_baseline_multimodel.py  train_per_market_interactions_hour_experts.py  train_per_market_interactions_multimodel.py  (+3 more)
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
configs/: market_ensemble_template.json
csv/: submissio.csv  (+22 more)
(+357 files in other folders)
