[project]
name = "nitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "scikit-learn>=1.8.0",
    "torchvision>=0.25.0",
    "xgboost>=3.0.5",
]
